@@ -203,16 +203,6 @@ LoadingIndicator {
     width: 60;
 }
 
-Notification {
-    background: $panel;
-    color: $primary;
-    margin: 1;
-    border: $panel-lighten-2;
-    padding-left: 1;
-    height: 3;
-}
-
-
 TabbedContent {
     padding-top: 2;
     layer: below;
